# ascii-image

./: .gitignore  .python-version  Pipfile  Procfile  README.md  asciimage.py  helper.py  pyproject.toml  requirements.txt
lib/: __init__.py
lib/gif2txt/: gif2txt.py
lib/img2txt/: ansi.py  img2txt.py
static/: styles.css
templates/: ascii-image.html  asciimage.html  base.html  index.html  success.html  upload.html
