[tool.poetry]
name = "ascii-image"
version = "0.0.1"
description = "Convert images to ascii-characters"
authors = ["Shakib Hossain <shakib609@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-script = "^2.0"
jinja2 = "^2.10"
pillow = "^6.1"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
